--- a/BillTimeApp/BillTime/Controls/WorkControl.xaml
+++ b/BillTimeApp/BillTime/Controls/WorkControl.xaml
@@ -31,7 +31,7 @@
         <!-- Row 2 -->
         <StackPanel Orientation="Vertical" Grid.Row="2" Margin="5 5 5 10" x:Name="dateStackPanel">
             <TextBlock>Date</TextBlock>
-            <ComboBox x:Name="dateDropDown"/>
+            <ComboBox x:Name="dateDropDown" SelectionChanged="dateDropDown_SelectionChanged"/>
             <!--<Button x:Name="editButton" Padding="5 2" Margin="5 0" VerticalAlignment="Bottom">Edit</Button>
             <Button x:Name="newButton" Padding="5 2" Margin="0 0 5 0" VerticalAlignment="Bottom">New</Button>-->
         </StackPanel>
